kubernetes/clusters/homelab/apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-prod-cp-1
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.0@sha256:6432d1dc58951b0280b29144ffc69834a8ae02786a2126f6b7c9bd453801c78b
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: audiobookshelf-pvc
              subPath: config
              mountPath: /config
            - name: audiobookshelf-pvc
              subPath: metadata
              mountPath: /metadata
            - name: media-nfs
              subPath: audiobooks
              mountPath: /audiobooks
      volumes:
        - name: audiobookshelf-pvc
          persistentVolumeClaim:
            claimName: audiobookshelf-pvc
        - name: media-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
